--- a/OpenSky.Client/Pages/AircraftTypes.xaml
+++ b/OpenSky.Client/Pages/AircraftTypes.xaml
@@ -323,16 +323,8 @@
                         <!-- ReSharper disable once Xaml.StaticResourceNotResolved -->
                         <Style TargetType="DataGridRow" BasedOn="{StaticResource DefaultDataGridRowStyle}">
                             <Style.Setters>
-                                <Setter Property="ToolTipService.InitialShowDelay">
-                                    <Setter.Value>
-                                        1500
-                                    </Setter.Value>
-                                </Setter>
-                                <Setter Property="ToolTipService.ShowDuration">
-                                    <Setter.Value>
-                                        15000
-                                    </Setter.Value>
-                                </Setter>
+                                <Setter Property="ToolTipService.InitialShowDelay" Value="500" />
+                                <Setter Property="ToolTipService.ShowDuration" Value="15000" />
                                 <Setter Property="ToolTip">
                                     <Setter.Value>
                                         <Grid Tag="{Binding Path=.}">
