--- a/OpenSky.Client/Pages/AircraftTypes.xaml
+++ b/OpenSky.Client/Pages/AircraftTypes.xaml
@@ -438,8 +438,8 @@
                 <TextBlock Grid.Column="0" Grid.Row="24" VerticalAlignment="Center" Margin="0,0,5,0">Minimum runway<LineBreak/>length in feet</TextBlock>
                 <TextBlock Grid.Column="0" Grid.Row="25" VerticalAlignment="Center" Margin="0,0,5,0">Is variant of</TextBlock>
                 <TextBlock Grid.Column="0" Grid.Row="26" VerticalAlignment="Center" Margin="0,0,5,0">Next version</TextBlock>
-                <TextBlock Grid.Column="0" Grid.Row="27" VerticalAlignment="Center" Margin="0,0,5,0">Minimum price</TextBlock>
-                <TextBlock Grid.Column="0" Grid.Row="28" VerticalAlignment="Center" Margin="0,0,5,0">Maximum price</TextBlock>
+                <TextBlock Grid.Column="0" Grid.Row="27" VerticalAlignment="Center" Margin="0,0,5,0">Minimum price<LineBreak/>~50% of list</TextBlock>
+                <TextBlock Grid.Column="0" Grid.Row="28" VerticalAlignment="Center" Margin="0,0,5,0">Maximum price<LineBreak/>~110% of list</TextBlock>
                 <TextBlock Grid.Column="0" Grid.Row="29" VerticalAlignment="Center" Margin="0,0,5,0">Max payload Δ lbs</TextBlock>
                 <TextBlock Grid.Column="0" Grid.Row="30" VerticalAlignment="Center" Margin="0,0,5,0">Comments</TextBlock>
 
