--- a/OpenSky.Client/Pages/MyFleet.xaml
+++ b/OpenSky.Client/Pages/MyFleet.xaml
@@ -290,6 +290,21 @@
                             <TextBlock VerticalAlignment="Center">Total cost for this fuelling operation:</TextBlock>
                             <controls:SkybucksCurrency Margin="5,0,0,0" Currency="{Binding GroundOperations.FuelPrice}" />
                         </StackPanel>
+                        <Border Grid.Row="3" Grid.RowSpan="2" Background="{StaticResource OpenSkyRedBrush}" CornerRadius="3" Visibility="{Binding AirportDoesntSellFuelVisibility}">
+                            <StackPanel Orientation="Vertical" Margin="3">
+                                <StackPanel Orientation="Horizontal">
+                                    <TextBlock FontWeight="SemiBold">WARNING:</TextBlock>
+                                    <TextBlock Margin="5,0,0,0">The airport</TextBlock>
+                                    <TextBlock Text="{Binding GroundOperationsAircraft.AirportICAO}" Margin="5,0,0,0" />
+                                    <TextBlock Margin="5,0,0,0">does not sell</TextBlock>
+                                    <TextBlock Text="{Binding GroundOperationsAircraft.Type.FuelType}" Margin="5,0,0,0" />
+                                    <TextBlock>!</TextBlock>
+                                </StackPanel>
+                                <CheckBox MaxWidth="350" Margin="0,10,0,0" IsChecked="{Binding AllowFuelTrucking, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+                                    <TextBlock TextWrapping="Wrap">Allow fuel being trucked in at expensive rates and 30 minutes extra time</TextBlock>
+                                </CheckBox>
+                            </StackPanel>
+                        </Border>
                         <Border Grid.Row="5" Margin="5,10,5,5" Background="DarkOrange" CornerRadius="5" Visibility="{Binding GroundOperations.FuelDumpWarningVisibility}">
                             <StackPanel Orientation="Horizontal" Margin="5">
                                 <Image Width="16" Height="16" Source="{StaticResource Warning}" />
